--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Julian Sebastian Lopez Martinez CV<title>
+  <title>Julian Sebastian Lopez Martinez CV</title>
 </head>
 <body>
   <h1>Hola Mundo</h1>
