--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Julian Sebastian Lopez Martinez CV</title>
-</head>
-<body>
-  <h1>Hola Mundo</h1>
-</body>
-</html>
+Hello World!
