--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                     Intro
                                 </h2>
                                 <div class="o-content__body  o-section__description">
-                                    What I am all about.
+                                    About my self.
                                 </div>
                             </div>
                         </header><!-- /o-section__header -->
@@ -283,7 +283,7 @@
                                             <h3>Java</h3>
                                             <p>
                                                 I have wokred with Java for almost ten years
-                                                I developed monolitics applications but at the present 
+                                                I developed monolitics applications but at present 
                                                 I'm working with Micro services applications
                                             </p>
                                         </div>
@@ -298,9 +298,9 @@
                                             </div>
                                         </div>
                                         <div class="o-media__body  o-content__body">
-                                            <h3>Database</h3>
+                                            <h3>Databases</h3>
                                             <p>
-                                                I have experiencies with: Oracle, Mysql and DB2
+                                                I have experiencie in: Oracle, Mysql and DB2
                                                 I'm learing about non relational databases    
                                             </p>
                                         </div>
@@ -317,8 +317,8 @@
                                         <div class="o-media__body  o-content__body">
                                             <h3>Agile Methodologies</h3>
                                             <p>
-                                                I have been working with SCRUM since seven years 
-                                                and I worked with others methodologies such as 
+                                                I have been working with SCRUM for seven years, 
+                                                also, I worked with others methodologies such as 
                                                 Kanban or XP   
                                             </p>
                                         </div>
@@ -335,7 +335,7 @@
                                         <div class="o-media__body  o-content__body">
                                             <h3>Front End</h3>
                                             <p>
-                                                In this almost ten years, I worked with a lot of differents front-end frameworks such as:
+                                                I have 9+ years of experience working with, I worked with a lot of differents front-end frameworks such as:
                                                 Angular 2+, Typescript, Javascript, Jquery, Jquery UI, Ajax, Sencha, Polymer, 
                                                 Bootstrap, Material, Html, CSS.
                                             </p>
@@ -996,7 +996,7 @@
                                             </h3>
                                                 <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
                                             <p>
-                                                I play this beautiful sport every saturdays with friends. I'm part of a team in an amateur local tournament 
+                                                I play this great sport every Saturdays with friends. I'm part of a team in an amateur local tournament 
                                             </p>
                                         </div>
                                     </a>
@@ -1011,7 +1011,7 @@
                                             </h3>
                                             <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
                                             <p>
-                                                I really love eat, and I enjoy cooking trying to discover new flavors
+                                                As a fan of culinary arts I enjoy cooking and trying new flavours
                                             </p>
                                         </div>
                                     </a>
@@ -1025,7 +1025,7 @@
                                                 </h3>
                                                     <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
                                                 <p>
-                                                    I like to programming when I have free time.
+                                                    I like programming when I have free time.
                                                 </p>
                                             </div>
                                         </a>
@@ -1040,7 +1040,7 @@
                                                 </h3>
                                                 <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
                                                 <p>
-                                                        It's a good place where I go to clear my mind of.
+                                                    It's the best place when I want to get away from it all.
                                                 </p>
                                             </div>
                                         </a>
