--- a/index.html
+++ b/index.html
@@ -741,9 +741,15 @@
                                                     Buenos Aires, Argentina
                                                 </div>
                                             </div>
-                                            <div class="o-grid__col-md-7">
-                                                <p>
-                                                    <!-- Consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. -->
+                                            <div class="o-grid__col-md-7" style="padding-right: 0px">
+                                                <p style="font-style: italic;padding-top: 18px;">
+                                                    <a style="color: black">Clients:</a> GCBA - GPBA - Emergencias </br>
+                                                    <a style="color: black">Project:</a> Web Applicaton - Disease Control Ticket </br>
+                                                    <a style="color: black">Rol:</a> JAVA backend developer </br>
+                                                    <a style="color: black">Team composition:</a> Technical lead, 5 JAVA developers, 3 Front End developers, 3 Functional analysts, 2 QA </br>
+                                                    <a style="color: black">Tasks:</a> Features and bugs development, microservice architecture implementation</br>
+                                                    <a style="color: black">Metodologia:</a> Srcum (Daily - Planing Grooming - Retro)  </br>
+                                                    <a style="color: black">Techonologies, Frameworks and others:</a> Java 1.8, API Rest, Springboot, SpringCloud, SpringSecurity, Feign, Oracle, Flyway </br>
                                                 </p>
                                             </div>
                                         </div><!-- /o-grid -->
@@ -768,9 +774,15 @@
                                                     Buenos Aires, Argentina
                                                 </div>
                                             </div>
-                                            <div class="o-grid__col-md-7">
-                                                <p>
-                                                    <!-- Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. -->
+                                            <div class="o-grid__col-md-7" style="padding-right: 0px">
+                                                <p style="font-style: italic;padding-top: 18px;">
+                                                    <a style="color: black">Clients:</a> Edenor - Edesur </br>
+                                                    <a style="color: black">Project:</a> Web Applicaton - Power Outage Monitoring‎ </br>
+                                                    <a style="color: black">Rol:</a> JAVA full stack developer </br>
+                                                    <a style="color: black">Team composition:</a>Technical lead, 3 JAVA full stack developers</br>
+                                                    <a style="color: black">Tasks:</a> Features and bugs development, Deploys, meetings with product owner, QA, Functional analysts</br>
+                                                    <a style="color: black">Metodologia:</a> Daily Team composition meetings </br>
+                                                    <a style="color: black">Techonologies, Frameworks and others:</a> Java 1.8, Javascipt, Angular 2+, CSS, Bootstrap, Material, JSON, API Rest, Springboot, Jpa, Git, Maven, Planio </br>
                                                 </p>
                                             </div>
                                         </div><!-- /o-grid -->
@@ -795,9 +807,15 @@
                                                     Buenos Aires, Argentina
                                                 </div>
                                             </div>
-                                            <div class="o-grid__col-md-7">
-                                                <p>
-                                                    <!-- Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis faucibus. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. -->
+                                            <div class="o-grid__col-md-7" style="padding-right: 0px">
+                                                <p style="font-style: italic;padding-top: 18px;">
+                                                    <a style="color: black">Client:</a> OSDE </br>
+                                                    <a style="color: black">Project:</a> Web application - Call Center </br>
+                                                    <a style="color: black">Rol:</a> JAVA full stack developer </br>
+                                                    <a style="color: black">Team composition:</a>Technical lead, 3 JAVA full stack developers  2 QA, 2 Functional analysis</br>
+                                                    <a style="color: black">Tasks:</a> Features and bugs development, Deploys, meetings with product owner</br>
+                                                    <a style="color: black">Metodologia:</a> Srcum (Daily - Planing Grooming - Retro) </br>
+                                                    <a style="color: black">Techonologies, Frameworks and others:</a> Java 1.6, Javasctip, Sencha, CSS, Hiberanate, Ajax, JSON, Struts2, SOAP, Oracle, JBoss, SVN, GIT, Maven, JIRA </br>
                                                 </p>
                                             </div>
                                         </div><!-- /o-grid -->
@@ -822,9 +840,15 @@
                                                     Buenos Aires, Argentina
                                                 </div>
                                             </div>
-                                            <div class="o-grid__col-md-7">
-                                                <p>
-                                                    <!-- Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis faucibus. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. -->
+                                            <div class="o-grid__col-md-7" style="padding-right: 0px">
+                                                <p style="font-style: italic;padding-top: 18px;">
+                                                    <a style="color: black">Client:</a> OSDE </br>
+                                                    <a style="color: black">Project:</a> Web Applicaton - Reimbursement of medical certificates </br>
+                                                    <a style="color: black">Rol:</a> JAVA full stack developer </br>
+                                                    <a style="color: black">Team composition:</a>Software architect, Technical lead, 3 JAVA full stack developers (QAs and Functional analysts client side)  </br>
+                                                    <a style="color: black">Tasks:</a> Features and bugs development</br>
+                                                    <a style="color: black">Metodologia:</a> Srcum (Daily - Planing Grooming - Retro) </br>
+                                                    <a style="color: black">Techonologies, Frameworks and others:</a> Java 1.6, Javasript, HTML, CSS, Jquery, Ajax, JSON, Struts2, Hibernate, SOAP, Oracle, Jboss, SVN, Maven, JIRA</br>
                                                 </p>
                                             </div>
                                         </div><!-- /o-grid -->
@@ -848,9 +872,15 @@
                                                     Buenos Aires, Argentina
                                                 </div>
                                             </div>
-                                            <div class="o-grid__col-md-7">
-                                                <p>
-                                                    <!-- Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis faucibus. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. -->
+                                            <div class="o-grid__col-md-7" style="padding-right: 0px">
+                                                <p style="font-style: italic;padding-top: 18px;">
+                                                    <a style="color: black">Client:</a> IBM </br>
+                                                    <a style="color: black">Project:</a> Web Applicaton - Financial orientation </br>
+                                                    <a style="color: black">Rol:</a> JAVA full stack developer </br>
+                                                    <a style="color: black">Team composition:</a> Technical lead, 3 JAVA full stack developers (QAs and Functional analysts client side) </br>
+                                                    <a style="color: black">Tasks:</a> Minor features and bugs development</br>
+                                                    <a style="color: black">Metodologia:</a> -</br>
+                                                    <a style="color: black">Techonologies, Frameworks and others:</a> Java 1.6, EJB, JSP, Servlet, HTML, Javascipt, DB2, IBM Was, SVN, Maven, JIRA</br>
                                                 </p>
                                             </div>
                                         </div><!-- /o-grid -->
