--- a/index.html
+++ b/index.html
@@ -1154,10 +1154,10 @@
                                                 <a href="#" target="_blank" class="t-link-container">
                                                     <h4>Email</h4>
                                                     <p>
-                                                        <!-- <a onclick="this.setAttribute('href', 
+                                                        <a onclick="this.setAttribute('href', 
                                                         'https://v2.convertapi.com/convert/web/to/pdf?secret=eCxt6nQ2z15axtQN&download=attachment&url=julianlopez.dev'  " href="#">
                                                             Save page as PDF
-                                                        </a> -->
+                                                        </a>
                                                         <span class="t-link-container__item--blended">
                                                             jhulian10@gmail.com
                                                         </span>
