metdologia por Agile methodologies

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                                                     <a style="color: black">Rol:</a> JAVA backend developer </br>
                                                     <a style="color: black">Team composition:</a> Technical lead, 5 JAVA developers, 3 Front End developers, 3 Functional analysts, 2 QA </br>
                                                     <a style="color: black">Tasks:</a> Features and bugs development, microservice architecture implementation</br>
-                                                    <a style="color: black">Metodologia:</a> Srcum (Daily - Planing Grooming - Retro)  </br>
+                                                    <a style="color: black">Agile methodologies:</a> Srcum (Daily - Planing Grooming - Retro)  </br>
                                                     <a style="color: black">Techonologies, Frameworks and others:</a> Java 1.8, API Rest, Springboot, SpringCloud, SpringSecurity, Feign, Oracle, Flyway </br>
                                                 </p>
                                             </div>
@@ -781,7 +781,7 @@
                                                     <a style="color: black">Rol:</a> JAVA full stack developer </br>
                                                     <a style="color: black">Team composition:</a>Technical lead, 3 JAVA full stack developers</br>
                                                     <a style="color: black">Tasks:</a> Features and bugs development, Deploys, meetings with product owner, QA, Functional analysts</br>
-                                                    <a style="color: black">Metodologia:</a> Daily Team composition meetings </br>
+                                                    <a style="color: black">Agile methodologies:</a> Daily Team composition meetings </br>
                                                     <a style="color: black">Techonologies, Frameworks and others:</a> Java 1.8, Javascipt, Angular 2+, CSS, Bootstrap, Material, JSON, API Rest, Springboot, Jpa, Git, Maven, Planio </br>
                                                 </p>
                                             </div>
@@ -814,7 +814,7 @@
                                                     <a style="color: black">Rol:</a> JAVA full stack developer </br>
                                                     <a style="color: black">Team composition:</a>Technical lead, 3 JAVA full stack developers  2 QA, 2 Functional analysis</br>
                                                     <a style="color: black">Tasks:</a> Features and bugs development, Deploys, meetings with product owner</br>
-                                                    <a style="color: black">Metodologia:</a> Srcum (Daily - Planing Grooming - Retro) </br>
+                                                    <a style="color: black">Agile methodologies:</a> Srcum (Daily - Planing Grooming - Retro) </br>
                                                     <a style="color: black">Techonologies, Frameworks and others:</a> Java 1.6, Javasctip, Sencha, CSS, Hiberanate, Ajax, JSON, Struts2, SOAP, Oracle, JBoss, SVN, GIT, Maven, JIRA </br>
                                                 </p>
                                             </div>
@@ -847,7 +847,7 @@
                                                     <a style="color: black">Rol:</a> JAVA full stack developer </br>
                                                     <a style="color: black">Team composition:</a>Software architect, Technical lead, 3 JAVA full stack developers (QAs and Functional analysts client side)  </br>
                                                     <a style="color: black">Tasks:</a> Features and bugs development</br>
-                                                    <a style="color: black">Metodologia:</a> Srcum (Daily - Planing Grooming - Retro) </br>
+                                                    <a style="color: black">Agile methodologies:</a> Srcum (Daily - Planing Grooming - Retro) </br>
                                                     <a style="color: black">Techonologies, Frameworks and others:</a> Java 1.6, Javasript, HTML, CSS, Jquery, Ajax, JSON, Struts2, Hibernate, SOAP, Oracle, Jboss, SVN, Maven, JIRA</br>
                                                 </p>
                                             </div>
@@ -879,7 +879,7 @@
                                                     <a style="color: black">Rol:</a> JAVA full stack developer </br>
                                                     <a style="color: black">Team composition:</a> Technical lead, 3 JAVA full stack developers (QAs and Functional analysts client side) </br>
                                                     <a style="color: black">Tasks:</a> Minor features and bugs development</br>
-                                                    <a style="color: black">Metodologia:</a> -</br>
+                                                    <a style="color: black">Agile methodologies:</a> -</br>
                                                     <a style="color: black">Techonologies, Frameworks and others:</a> Java 1.6, EJB, JSP, Servlet, HTML, Javascipt, DB2, IBM Was, SVN, Maven, JIRA</br>
                                                 </p>
                                             </div>
@@ -1153,11 +1153,11 @@
                                             <div class="o-content__body">
                                                 <a href="#" target="_blank" class="t-link-container">
                                                     <h4>Email</h4>
-                                                    <p>
+                                                    <!-- <p>
                                                         <a onclick="this.setAttribute('href', 
                                                         'https://v2.convertapi.com/convert/web/to/pdf?secret=eCxt6nQ2z15axtQN&download=attachment&url=julianlopez.dev'  " href="#">
                                                             Save page as PDF
-                                                        </a>
+                                                        </a> -->
                                                         <span class="t-link-container__item--blended">
                                                             jhulian10@gmail.com
                                                         </span>
