--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
                                                 <div class="c-work__timeframe">
                                                     2010 &ndash; 2012
                                                 </div>
-                                                <h3 class="c-work__heading">
+                                                <h3 class="c-work__heading">|+
                                                     IBM
                                                 </h3>
                                                 <h4 class="c-work__title">
@@ -1153,11 +1153,10 @@
                                             <div class="o-content__body">
                                                 <a href="#" target="_blank" class="t-link-container">
                                                     <h4>Email</h4>
-                                                    <!-- <p>
-                                                        <a onclick="this.setAttribute('href', 
-                                                        'https://v2.convertapi.com/convert/web/to/pdf?secret=eCxt6nQ2z15axtQN&download=attachment&url=julianlopez.dev'  " href="#">
-                                                            Save page as PDF
-                                                        </a> -->
+                                                    <p>
+                                                        <a href="https://drive.google.com/u/0/uc?id=1FpbhdD7l1lgtCTv5LgqfWtH7ank8ta4J&export=download">
+                                                            Save as PDF
+                                                        </a>
                                                         <span class="t-link-container__item--blended">
                                                             jhulian10@gmail.com
                                                         </span>
