save as pdf cambiado de lugar

--- a/index.html
+++ b/index.html
@@ -1154,9 +1154,6 @@
                                                 <a href="#" target="_blank" class="t-link-container">
                                                     <h4>Email</h4>
                                                     <p>
-                                                        <a href="https://drive.google.com/u/0/uc?id=1FpbhdD7l1lgtCTv5LgqfWtH7ank8ta4J&export=download">
-                                                            Save as PDF
-                                                        </a>
                                                         <span class="t-link-container__item--blended">
                                                             jhulian10@gmail.com
                                                         </span>
@@ -1167,8 +1164,12 @@
                                     </div><!-- /o-grid__col -->
 
                                 </div><!-- /o-grid -->
-                                </div><!-- /c-footer__contact -->
-
+                                
+                                <a style="font-size: 17px;" href="https://drive.google.com/u/0/uc?id=1FpbhdD7l1lgtCTv5LgqfWtH7ank8ta4J&export=download">
+                                    Save as PDF
+                                </a>
+                                
+                            </div><!-- /c-footer__contact -->
                                 <hr class="c-footer__contact-divider" />
 
                                 <div class="o-content">
