saque algunas cosas viejas

--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
                             <div class="o-grid  o-grid--gallery">
 
                                 <div class="o-grid__col-sm-6">
-                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" data-lightbox-hidpi="" title="Musée du Louvre" data-lightbox-gallery="portfolio">
+                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" data-lightbox-hidpi="" data-lightbox-gallery="portfolio">
                                         <img src="assets/images/portfolio/football.png" alt="">
                                         <div class="c-image-overlay__content">
                                             <h3>
@@ -1033,7 +1033,7 @@
                                 </div><!-- /o-grid__col -->
 
                                 <div class="o-grid__col-sm-6">
-                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" data-lightbox-hidpi="" title="Tunnel Effect" data-lightbox-gallery="portfolio">
+                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" data-lightbox-hidpi="" data-lightbox-gallery="portfolio">
                                         <img src="assets/images/portfolio/cook.png" alt="">
                                         <div class="c-image-overlay__content">
                                             <h3>
@@ -1047,7 +1047,7 @@
                                     </a>
                                 </div><!-- /o-grid__col -->
                                 <div class="o-grid__col-sm-6">
-                                        <a class="c-image-overlay  t-image-overlay  js-lightbox" data-lightbox-hidpi="" title="Musée du Louvre" data-lightbox-gallery="portfolio">
+                                        <a class="c-image-overlay  t-image-overlay  js-lightbox" data-lightbox-hidpi="" data-lightbox-gallery="portfolio">
                                             <img src="assets/images/portfolio/programming.png" alt="">
                                             <div class="c-image-overlay__content">
                                                 <h3>
@@ -1062,7 +1062,7 @@
                                     </div><!-- /o-grid__col -->
     
                                     <div class="o-grid__col-sm-6">
-                                        <a class="c-image-overlay  t-image-overlay  js-lightbox" data-lightbox-hidpi="" title="Tunnel Effect" data-lightbox-gallery="portfolio">
+                                        <a class="c-image-overlay  t-image-overlay  js-lightbox" data-lightbox-hidpi="" data-lightbox-gallery="portfolio">
                                             <img src="assets/images/portfolio/gym.png" alt="">
                                             <div class="c-image-overlay__content">
                                                 <h3>
