--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
                                                 <div class="c-work__timeframe">
                                                     2010 &ndash; 2012
                                                 </div>
-                                                <h3 class="c-work__heading">|+
+                                                <h3 class="c-work__heading">
                                                     IBM
                                                 </h3>
                                                 <h4 class="c-work__title">
